--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -24,21 +24,40 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         android:padding="@dimen/fab_margin"
-        app:layout_constraintBottom_toTopOf="@+id/addTask"
+        app:layout_constraintBottom_toTopOf="@+id/insertTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toDo" />
 
-    <Button
-        android:id="@+id/addTask"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:text="@string/Add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.918"
-        app:layout_constraintStart_toStartOf="parent" />
+   <LinearLayout
+       android:id="@+id/insertTask"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       app:layout_constraintHorizontal_weight="2"
+       android:layout_margin="10dp"
+       android:padding="10dp"
+       app:layout_constraintTop_toBottomOf="@id/recyclerViewForFragmentToDo"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent">
+       <com.google.android.material.textfield.TextInputEditText
+           android:layout_width="300dp"
+           android:layout_height="wrap_content"/>
+       <Button
+           android:id="@+id/addTask"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginBottom="50dp"
+           android:text="@string/Add"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintHorizontal_bias="0.918"
+           app:layout_constraintStart_toStartOf="parent" />
+
+   </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
