--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragmentToDo"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -28,7 +29,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toDo" />
+        app:layout_constraintTop_toBottomOf="@+id/toDo"
+        tools:listitem="@layout/task_list"/>
 
    <LinearLayout
        android:id="@+id/insertTask"
