--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/list_item"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
+        android:id="@+id/linearLayoutToDo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/fab_margin"
@@ -12,14 +15,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
         <RadioButton
+            android:id="@+id/linearLayoutToDoRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/linearLayoutToDoTextField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/fab_margin"
             android:textSize="@dimen/text_size_of_tasks"
-            android:text="@string/task_placeholder"/>
+            android:text="@string/task_placeholder" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
