--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -20,7 +20,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewForFragmentToDo"
-        android:layout_width="428dp"
+        android:layout_width="match_parent"
         android:layout_height="464dp"
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
@@ -37,7 +37,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
-       app:layout_constraintHorizontal_weight="2"
+       app:layout_constraintHorizontal_weight="0"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewForFragmentToDo"
@@ -47,7 +47,7 @@
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTask"
            android:hint="@string/inputTask"
-           android:layout_width="300dp"
+           android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:ignore="InvalidId" />
        <Button
@@ -55,6 +55,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
+           android:layout_marginLeft="50dp"
            android:text="@string/Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
