--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -15,11 +15,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
         <RadioButton
-            android:id="@+id/linearLayoutToDoRadioButton"
+            android:id="@+id/listItemRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/linearLayoutToDoTextField"
+            android:id="@+id/listItemTextField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/fab_margin"
