--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -29,8 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toDo"
-        tools:listitem="@layout/task_list"/>
+        app:layout_constraintTop_toBottomOf="@+id/toDo"/>
 
    <LinearLayout
        android:id="@+id/insertTask"
