--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -21,6 +21,7 @@
         android:id="@+id/recyclerViewForFragmentCompleted"
         android:layout_width="380dp"
         android:layout_height="603dp"
+        android:padding="@dimen/fab_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintLeft_toLeftOf="parent"
