--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -31,6 +31,18 @@
         app:layout_constraintTop_toBottomOf="@+id/toDo"
         app:layout_constraintVertical_bias="0.085" />
 
+    <ImageButton
+        android:id="@+id/inputTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.947" />
+
     <include
         android:id="@+id/includedInputField"
         layout="@layout/input_field" />
