--- a/app/src/main/res/layout/input_field.xml
+++ b/app/src/main/res/layout/input_field.xml
@@ -35,7 +35,7 @@
             android:id="@+id/addTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/fab_margin"
+            android:padding="10dp"
             android:text="@string/Add"
             android:textSize="@dimen/header_size" />
 
