--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -1,4 +1,5 @@
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/layoutCompleted"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,5 +29,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/completed"
         app:layout_constraintVertical_bias="0.497" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
