--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="header_size">20sp</dimen>
     <dimen name="text_size_of_tasks">20sp</dimen>
+    <dimen name="padding_size_for_card_view">5sp</dimen>
 </resources>
