--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="header_size">20sp</dimen>
     <dimen name="text_size_of_tasks">20sp</dimen>
     <dimen name="padding_size_for_card_view">5sp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
 </resources>
