Solved the nav Controller issue

--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -51,9 +51,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <include
-        android:id="@+id/includedEditTextField"
-        layout="@layout/edit_field" />
+<!--    <include-->
+<!--        android:id="@+id/includedEditTextField"-->
+<!--        layout="@layout/edit_field" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
