--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -37,6 +37,11 @@
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
                 android:text="@string/task_placeholder" />
+            <TextView
+                android:id="@+id/alarmTimeDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
