--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/list_item"
+    android:layout_marginBottom="5dp"
+    android:id="@+id/cardView"
+    card_view:cardCornerRadius="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cardView"
-        android:layout_marginBottom="@dimen/padding_size_for_card_view"
+        android:id="@+id/list_item"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        card_view:cardCornerRadius="4dp">
-        <LinearLayout
-            android:id="@+id/linearLayoutToDo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
             <CheckBox
                 android:id="@+id/checkBox_complete"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
             <TextView
                 android:id="@+id/listItemTextField"
-                android:layout_width="wrap_content"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/padding_size_for_card_view"
                 android:textSize="@dimen/text_size_of_tasks"
                 android:shadowColor="@color/black"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
-                android:text="@string/task_placeholder" />
+                android:text="@string/task_placeholder"
+                app:layout_constraintEnd_toStartOf="@+id/alarmTimeDisplay"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/checkBox_complete"/>
             <TextView
                 android:id="@+id/alarmTimeDisplay"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
+                android:layout_marginEnd="3dp"
                 android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
