--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/toDoFragment">
+    app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/toDoFragment"
         android:name="com.example.task.ToDoFragment"
-        android:label="ToDoFragment" >
-        <action
-            android:id="@+id/action_toDoFragment_to_completedFragment"
-            app:destination="@id/completedFragment" />
-        <action
-            android:id="@+id/action_toDoFragment_to_addTaskFragment"
-            app:destination="@id/addTaskFragment" />
-    </fragment>
+        android:label="ToDoFragment" />
     <fragment
         android:id="@+id/completedFragment"
         android:name="com.example.task.CompletedFragment"
-        android:label="CompletedFragment" >
-        <action
-            android:id="@+id/action_completedFragment_to_toDoFragment"
-            app:destination="@id/toDoFragment" />
-    </fragment>
+        android:label="CompletedFragment" />
     <dialog
         android:id="@+id/addTaskFragment"
         android:name="com.example.task.AddTaskFragment"
@@ -32,4 +21,13 @@
             app:argType="integer"
             android:defaultValue="-1" />
     </dialog>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.task.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_addTaskFragment"
+            app:destination="@id/addTaskFragment" />
+    </fragment>
 </navigation>
