--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -38,5 +38,14 @@
         app:layout_constraintTop_toBottomOf="@+id/completed"
         app:layout_constraintVertical_bias="0.497" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_completed"
+        android:layout_width="350dp"
+        android:layout_height="650dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/completed" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
