--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -2,6 +2,7 @@
 
     <style name="Theme.Task" parent="Base.Theme.Task">
         <!-- Transparent system bars for edge-to-edge. -->
+        <item name="android:textAppearance">@style/TextAppearance.Task</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
