Fix notification issue after killing application

--- a/app/src/main/res/drawable/green_dot.xml
+++ b/app/src/main/res/drawable/green_dot.xml
@@ -4,4 +4,6 @@
 
     <solid android:color="#00FF00"/> <!-- Green color -->
     <size android:width="10dp" android:height="10dp"/> <!-- Adjust size -->
+    <stroke android:width="1px" android:color="#000000"/> <!-- Black border -->
+
 </shape>
