--- a/app/src/main/res/drawable/yellow_dot.xml
+++ b/app/src/main/res/drawable/yellow_dot.xml
@@ -4,4 +4,5 @@
 
     <solid android:color="#FFFF00"/> <!-- Yellow color -->
     <size android:width="10dp" android:height="10dp"/> <!-- Adjust size -->
+    <stroke android:width="1px" android:color="#000000"/> <!-- Black border -->
 </shape>
